# adventofcode

./: Cargo.toml
benches/: aoc2022.rs
src/: aoc2020.rs  aoc2021.rs  aoc2022.rs  common.rs  lib.rs  main.rs
src/aoc2022/: day1.rs  day10.rs  day11.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/common/: matrix.rs
