[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.6.9"
regex = "1.4.2"
chrono = "0.4.19"
bit-vec = "0.6.3"
log = "0.4.14"
env_logger = "0.9.0"
itertools = "0.10.3"
peg = "0.7.0"

[features]
default = ["aoc2021"]
vess_puzzles = ["run_aoc2020"]
run_aoc2020 = []
run_aoc2021 = []
aoc2020 = ["aoc2020-week1"]
aoc2020-week1 = ["aoc2020-day1", "aoc2020-day2", "aoc2020-day3", "aoc2020-day4", "aoc2020-day5", "aoc2020-day6", "aoc2020-day7"]
aoc2020-day1 = ["aoc2020-day1-part1", "aoc2020-day1-part2"]
aoc2020-day2 = ["aoc2020-day2-part1", "aoc2020-day2-part2"]
aoc2020-day3 = ["aoc2020-day3-part1", "aoc2020-day3-part2"]
aoc2020-day4 = ["aoc2020-day4-part1", "aoc2020-day4-part2"]
aoc2020-day5 = ["aoc2020-day5-part1", "aoc2020-day5-part2"]
aoc2020-day6 = ["aoc2020-day6-part1", "aoc2020-day6-part2"]
aoc2020-day7 = ["aoc2020-day7-part1", "aoc2020-day7-part2"]
aoc2020-day1-part1 = ["run_aoc2020"]
aoc2020-day1-part2 = ["run_aoc2020"]
aoc2020-day2-part1 = ["run_aoc2020"]
aoc2020-day2-part2 = ["run_aoc2020"]
aoc2020-day3-part1 = ["run_aoc2020"]
aoc2020-day3-part2 = ["run_aoc2020"]
aoc2020-day4-part1 = ["run_aoc2020"]
aoc2020-day4-part2 = ["run_aoc2020"]
aoc2020-day5-part1 = ["run_aoc2020"]
aoc2020-day5-part2 = ["run_aoc2020"]
aoc2020-day6-part1 = ["run_aoc2020"]
aoc2020-day6-part2 = ["run_aoc2020"]
aoc2020-day7-part1 = ["run_aoc2020"]
aoc2020-day7-part2 = ["run_aoc2020"]
aoc2021 = ["aoc2021-week1", "aoc2021-week2"]
aoc2021-week1 = ["aoc2021-day1", "aoc2021-day2", "aoc2021-day3", "aoc2021-day4", "aoc2021-day5", "aoc2021-day6", "aoc2021-day7"]
aoc2021-week2 = ["aoc2021-day8", "aoc2021-day9"]
aoc2021-day1 = ["aoc2021-day1-part1", "aoc2021-day1-part2"]
aoc2021-day2 = ["aoc2021-day2-part1", "aoc2021-day2-part2"]
aoc2021-day3 = ["aoc2021-day3-part1", "aoc2021-day3-part2"]
aoc2021-day4 = ["aoc2021-day4-part1", "aoc2021-day4-part2"]
aoc2021-day5 = ["aoc2021-day5-part1", "aoc2021-day5-part2"]
aoc2021-day6 = ["aoc2021-day6-part1", "aoc2021-day6-part2"]
aoc2021-day7 = ["aoc2021-day7-part1", "aoc2021-day7-part2"]
aoc2021-day8 = ["aoc2021-day8-part1"]
aoc2021-day9 = ["aoc2021-day9-part1", "aoc2021-day9-part2"]
aoc2021-day1-part1 = ["run_aoc2021"]
aoc2021-day1-part2 = ["run_aoc2021"]
aoc2021-day2-part1 = ["run_aoc2021"]
aoc2021-day2-part2 = ["run_aoc2021"]
aoc2021-day3-part1 = ["run_aoc2021"]
aoc2021-day3-part2 = ["run_aoc2021"]
aoc2021-day4-part1 = ["run_aoc2021"]
aoc2021-day4-part2 = ["run_aoc2021"]
aoc2021-day5-part1 = ["run_aoc2021"]
aoc2021-day5-part2 = ["run_aoc2021"]
aoc2021-day6-part1 = ["run_aoc2021"]
aoc2021-day6-part2 = ["run_aoc2021"]
aoc2021-day7-part1 = ["run_aoc2021"]
aoc2021-day7-part2 = ["run_aoc2021"]
aoc2021-day8-part1 = ["run_aoc2021"]
aoc2021-day8-part2 = ["run_aoc2021"]
aoc2021-day9-part1 = ["run_aoc2021"]
aoc2021-day9-part2 = ["run_aoc2021"]

[profile.release]
opt-level = 3
debug = false
rpath = false

[profile.minimum]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"