[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
regex = "1.7"
chrono = "0.4.23"
bit-vec = "0.6"
itertools = "0.10"
peg = "0.8"
rayon = "1.6"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["io-util", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3.16"

[features]

[profile.release]
opt-level = 3
debug = false
rpath = false

[profile.minimum]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"