[package]
name = "aoc"
version = "0.1.0"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5"
regex = "1.7"
chrono = "0.4.23"
bit-vec = "0.6"
itertools = "0.10"
itermore = "0.5"
peg = "0.8"
rayon = "1.6"
tokio = { version = "1.22.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.11", features = ["io-util", "fs"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["std", "env-filter", "fmt"] }
clap = { version = "4.0", features = ["derive"] }
either = { version = "1.8.0", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["stable"] }
tracing-test = "0.1"

[[bench]]
name = "aoc2022"
harness = false

[features]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[profile.minimum]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"